[package]
authors = ["Twilight Contributors"]
categories = []
description = "Utilities for working with mentions in the Twilight ecosystem."
documentation = "https://docs.rs/twilight-mention"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_2_mention.html"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "twilight-mention"
publish = false
repository = "https://github.com/twilight-rs/twilight.git"
readme = "README.md"
rust-version = "1.57"
version = "0.8.0"

[dependencies]
twilight-model = { default-features = false, path = "../model" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }

[[bench]]
name = "fmt"
harness = false
path = "benches/fmt.rs"
