[package]
authors = ["Twilight Contributors"]
categories = []
description = "Discord API models for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-model"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_1_model.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-model"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.6.0"

[dependencies]
bitflags = "1"
serde = { features = ["derive"], version = "1.0.4" }
serde_repr = "0.1.5"
tracing = "0.1"

[dev-dependencies]
criterion = "0.3"
serde_json = "1"
serde_test = "1"
static_assertions = "1.0"

[[bench]]
name = "deserialization"
harness = false
path = "benches/deserialization.rs"
