[package]
authors = ["Twilight Contributors"]
categories = []
description = "Discord API models for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-model"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_1_model.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-model"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.8.4"

[dependencies]
bitflags = { default-features = false, version = "1" }
serde = { default-features = false, features = ["derive", "std"], version = "1.0.103" }
serde-value = { default-features = false, version = "0.7" }
serde_repr = { default-features = false, version = "0.1.5" }
time = { default-features = false, features = ["parsing", "std"], version = "0.3" }

# Optional dependencies.
tracing = { default-features = false, optional = true, version = "0.1.16" }

[features]
default = ["tracing"]

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
serde_json = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1.0" }

[[bench]]
name = "deserialization"
harness = false
path = "benches/deserialization.rs"

[[bench]]
name = "image_hash"
harness = false
path = "benches/image_hash.rs"
