[package]
authors = ["Twilight Contributors"]
categories = []
description = "Discord API models for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-model"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_1_model.html"
include = ["src/**/*.rs"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-model"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.60"
version = "0.11.0"

[dependencies]
bitflags = { default-features = false, version = "1" }
serde = { default-features = false, features = ["derive", "std"], version = "1.0.103" }
serde-value = { default-features = false, version = "0.7" }
serde_repr = { default-features = false, version = "0.1.5" }
time = { default-features = false, features = ["parsing", "std"], version = "0.3" }
tracing = { default-features = false, version = "0.1.16" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
serde_json = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1.0" }

[[bench]]
name = "deserialization"
harness = false
path = "benches/deserialization.rs"

[[bench]]
name = "image_hash"
harness = false
path = "benches/image_hash.rs"
