[package]
authors = ["Twilight Contributors"]
documentation = "https://docs.rs/twilight-oauth2"
edition = "2018"
homepage = "https://github.com/twilight-rs/twilight/tree/trunk/oauth2"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "oauth2", "twilight"]
license = "ISC"
name = "twilight-oauth2"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.1.0"

[dependencies]
serde = { default-features = false, features = ["derive"], version = "1" }
twilight-model = { default-features = false, path = "../model" }
urlencoding = { default-features = false, version = "1" }
url = { default-features = false, version = "2" }

[dev-dependencies]
serde_test = { default-features = false, version = "1" }
