[package]
name = "slash"
version = "0.1.0"
authors = ["erk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twilight-model = { path = "../model" }
tracing-subscriber = "0.2"
bytes = "0.5"
hex = "0.4"
once_cell = "1.4.1"

[dependencies.ed25519-dalek]
version = "1"