[package]
authors = ["Twilight Contributors"]
categories = ["asynchronous"]
description = "Utility to filter wait for filtered incoming events for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-standby"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_6_standby.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-standby"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.8.3"

[dependencies]
dashmap = { default-features = false, version = "4" }
futures-util = { default-features = false, features = ["std"], version = "0.3" }
tokio = { default-features = false, features = ["sync"], version = "1.0" }
twilight-model = { default-features = false, path = "../model" }

# Optional dependencies.
tracing = { default-features = false, features = ["std", "attributes"], optional = true, version = "0.1" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { default-features = false, features = ["rustls"], path = "../gateway" }

[features]
default = ["tracing"]
