[package]
authors = ["Twilight Contributors"]
categories = ["asynchronous"]
description = "Utility to filter wait for filtered incoming events for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-standby"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_6_standby.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-standby"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.60"
version = "0.10.0"

[dependencies]
dashmap = { default-features = false, version = ">= 5.1, < 5.3" }
futures-util = { default-features = false, features = ["std"], version = "0.3" }
tokio = { default-features = false, features = ["sync"], version = "1.0" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-model = { default-features = false, path = "../model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], path = "../gateway" }
