[package]
authors.workspace = true
categories = ["caching"]
description = "In-process-memory based cache for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/chapter_1_crates/section_4_cache_inmemory.html"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-cache-inmemory"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.15.0-rc.1"

[dependencies]
bitflags = { default-features = false, version = "1" }
dashmap = { default-features = false, version = "5.3" }
serde = { default-features = false, features = ["derive"], version = "1" }
twilight-model = { default-features = false, path = "../twilight-model", version = "0.15.0-rc.1" }

# Optional dependencies.
twilight-util = { default-features = false, features = ["permission-calculator"], optional = true, path = "../twilight-util", version = "0.15.0-rc.1" }

[dev-dependencies]
futures = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], path = "../twilight-gateway" }

[features]
permission-calculator = ["dep:twilight-util"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
