[package]
authors.workspace = true
description = "Discord Gateway connection queue implementation for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-gateway-queue"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.14.0"

[dependencies]
tokio = { default-features = false, features = ["rt", "sync", "time"], version = "1.0" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }

# Optional dependencies.
twilight-http = { default-features = false, optional = true, path = "../twilight-http", version = "0.14.3" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }

[features]
default = ["twilight-http"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
