[package]
authors.workspace = true
description = "Discord Gateway connection queue implementation for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-gateway-queue"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.17.0"

[dependencies]
tokio = { default-features = false, features = ["macros", "rt", "sync", "time"], version = "1.15" }
tracing = { default-features = false, features = ["std"], version = "0.1" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["test-util"], version = "1.0" }
twilight-http = { default-features = false, path = "../twilight-http", version = "0.17.0" }
