[package]
authors.workspace = true
categories = ["api-bindings", "asynchronous"]
description = "Discord REST API ratelimiter implementations for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-http-ratelimiting"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.15.3"

[dependencies]
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1.23" }

[dev-dependencies]
criterion = { default-features = false, version = "0.4" }
static_assertions = { default-features = false, version = "1.1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[[bench]]
name = "headers"
harness = false
path = "benches/headers.rs"
