[package]
authors.workspace = true
categories = ["api-bindings", "asynchronous"]
description = "Discord REST API ratelimiter implementations for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-http-ratelimiting"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.16.0"

[dependencies]
hashbrown = { default-features = false, version = "0.15" }
tokio = { default-features = false, features = ["macros", "rt", "sync", "time"], version = "1.29" }
tokio-util = { default-features = false, features = ["time"], version = "0.7.11" }
tracing = { default-features = false, features = ["std"], version = "0.1.23" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
tokio = { default-features = false, features = ["test-util"], version = "1.0" }
