[package]
authors = ["Twilight Contributors"]
categories = []
description = "Utilities for working with mentions in the Twilight ecosystem."
documentation = "https://docs.rs/twilight-mention"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_2_mention.html"
include = ["src/**/*.rs", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "twilight-mention"
publish = true
repository = "https://github.com/twilight-rs/twilight.git"
readme = "README.md"
rust-version = "1.60"
version = "0.12.0"

[dependencies]
twilight-model = { default-features = false, path = "../twilight-model", version = "0.12.1" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }

[[bench]]
name = "fmt"
harness = false
path = "benches/fmt.rs"
