[package]
authors.workspace = true
description = "Discord API models for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/chapter_1_crates/section_1_model.html"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-model"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.15.2"

[dependencies]
bitflags = { default-features = false, version = "2" }
serde = { default-features = false, features = ["derive", "std"], version = "1.0.103" }
serde-value = { default-features = false, version = "0.7" }
serde_repr = { default-features = false, version = "0.1.5" }
time = { default-features = false, features = ["parsing", "std"], version = "0.3" }

[dev-dependencies]
criterion = { default-features = false, version = "0.4" }
serde_json = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1.0" }

[[bench]]
name = "deserialization"
harness = false
path = "benches/deserialization.rs"

[[bench]]
name = "image_hash"
harness = false
path = "benches/image_hash.rs"
