[package]
authors.workspace = true
categories = ["asynchronous"]
description = "Utility to filter wait for filtered incoming events for the Twilight ecosystem."
edition.workspace = true
homepage = "https://twilight.rs/chapter_1_crates/section_6_standby.html"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-standby"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.15.1"

[dependencies]
dashmap = { default-features = false, version = "5.3" }
futures-util = { default-features = false, features = ["std"], version = "0.3" }
tokio = { default-features = false, features = ["sync"], version = "1.0" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-model = { default-features = false, path = "../twilight-model", version = "0.15.1" }

[dev-dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], path = "../twilight-gateway" }
