[package]
authors = ["Twilight Contributors"]
categories = []
description = "Miscellaneous utilities for Twilight."
documentation = "https://docs.rs/twilight-util"
edition = "2021"
homepage = "https://twilight.rs"
include = ["src/**/*.rs", "README.md"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-util"
publish = true
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.60"
version = "0.13.1"

[dependencies]
twilight-model = { default-features = false, optional = true, path = "../twilight-model", version = "0.13.2" }
twilight-validate = { default-features = false, optional = true, path = "../twilight-validate", version = "0.13.1" }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
builder = ["dep:twilight-model", "dep:twilight-validate"]
link = ["dep:twilight-model"]
permission-calculator = ["dep:twilight-model"]
snowflake = ["dep:twilight-model"]
full = ["builder", "link", "permission-calculator", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
