[package]
authors.workspace = true
description = "Miscellaneous utilities for Twilight."
edition.workspace = true
homepage = "https://twilight.rs"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-util"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.15.0"

[dependencies]
twilight-model = { default-features = false, optional = true, path = "../twilight-model", version = "0.15.0" }
twilight-validate = { default-features = false, optional = true, path = "../twilight-validate", version = "0.15.0" }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
builder = ["dep:twilight-model", "dep:twilight-validate"]
link = ["dep:twilight-model"]
permission-calculator = ["dep:twilight-model"]
snowflake = ["dep:twilight-model"]
full = ["builder", "link", "permission-calculator", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
