[package]
authors.workspace = true
description = "Miscellaneous utilities for Twilight."
edition.workspace = true
homepage = "https://twilight.rs"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-util"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.16.0-rc.1"

[dependencies]
twilight-model = { default-features = false, optional = true, path = "../twilight-model", version = "0.16.0-rc.1" }
twilight-validate = { default-features = false, optional = true, path = "../twilight-validate", version = "0.16.0-rc.1" }
serde_json = { default-features = false, optional = true, version = "1.0.96" }

# Signature validation
ed25519-dalek = { version = "2.0.0-rc.2", optional = true, default-features = false}
hex = { version = "0.4.3", optional = true, default-features = false }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
builder = ["dep:twilight-model", "dep:twilight-validate"]
link = ["dep:twilight-model"]
permission-calculator = ["dep:twilight-model"]
snowflake = ["dep:twilight-model"]
signature-validation = ["dep:ed25519-dalek", "dep:hex", "dep:serde_json"]
full = ["builder", "link", "permission-calculator", "snowflake", "signature-validation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
