[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings"]
description = "Functions and constants for validating request parameters"
documentation = "https://docs.rs/twilight-validate"
edition = "2021"
homepage = "https://twilight.rs/"
include = ["src/**/*.rs", "README.md"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-validate"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.60"
version = "0.11.1"

[dependencies]
twilight-model = { default-features = false, path = "../twilight-model", version = "0.11.3" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
